--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
+    "dev": "tsx --env-file=.env server/index.ts",
     "build": "tsx script/build.ts",
-    "start": "NODE_ENV=production node dist/index.cjs",
+    "start": "node dist/index.cjs",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push --env-file=.env",
+    "db:seed": "tsx --env-file=.env server/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
